src/view/events/snapshots/nifi_lens__view__events__render__tests__events_done_with_results.snap
---
source: src/view/events/render.rs
expression: render_to_string(&state)
---
"┌ Filters ─────────────────────────────────────────────────────────────────────────────────────────┐"
"│D time last 15m   T type (any)   S source (any)   U uuid (any)   A attr (any)                     │"
"│status ● done   took 842ms   results 2 / cap 500   — D/T/S/U/A edit · Enter run · N new · R reset │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌ Events ──────────────────────────────────────────────────────────────────────── last __ ago ┐"
"│time            type                   component                uuid           details            │"
"│Apr 13 08:12:15 DROP                   ControlRate              8f2ce90a…a9    failure            │"
"│Apr 13 08:12:16 ROUTE                  UpdateRecord             3b0e1234…12    matched            │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌ Detail ──────────────────────────────────────────────────────────────────────────────────────────┐"
"│                               press ↑/↓ to select a row for detail                               │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
