src/view/events/snapshots/nifi_lens__view__events__render__tests__events_empty_state.snap
---
source: src/view/events/render.rs
expression: render_to_string(&state)
---
"┌ Filters ─────────────────────────────────────────────────────────────────────────────────────────┐"
"│t time last 15m   T type (any)   s source (any)   u file uuid (any)   a attr (any)                │"
"│status ○ idle   results 0 / cap 500   — t/T/s/u/a edit · Enter run · n new · r reset · L raise cap│"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌ Events ────────────────────────────────────────────────────────────────────────────────────────  ┐"
"│                                                                                                  │"
"│                              Events — cluster-wide provenance search                             │"
"│                                                                                                  │"
"│                            Set filters above, then press Enter to run.                           │"
"│                                                                                                  │"
"│                                         Typical queries:                                         │"
"│                        t=last 15m  T=DROP,EXPIRE    → what dropped recently?                     │"
"│                   t=last 1h   s=UpdateRecord   → what has this processor touched?                │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌ Detail ──────────────────────────────────────────────────────────────────────────────────────────┐"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
