src/view/events/snapshots/nifi_lens__view__events__render__tests__events_failed_state.snap
---
source: src/view/events/render.rs
expression: render_to_string(&state)
---
"┌ Filters ─────────────────────────────────────────────────────────────────────────────────────────┐"
"│t time last 15m   T type (any)   s source (any)   u file uuid (any)   a attr (any)                │"
"│status ● failed   results 0 / cap 500   — t/T/s/u/a edit · Enter run · n new · r reset · L raise c│"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌ Events ────────────────────────────────────────────────────────────────────────────────────────  ┐"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                 query failed: connection refused                                 │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌ Detail ──────────────────────────────────────────────────────────────────────────────────────────┐"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
