src/view/events/snapshots/nifi_lens__view__events__render__tests__events_running_state.snap
---
source: src/view/events/render.rs
expression: render_to_string(&state)
---
"┌ Filters ─────────────────────────────────────────────────────────────────────────────────────────┐"
"│D time last 15m   T type (any)   S source (any)   U uuid (any)   A attr (any)                     │"
"│status ● running 45%   results 0 / cap 500   — D/T/S/U/A edit · Enter run · N new · R reset · L ra│"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌ Events ────────────────────────────────────────────────────────────────────────────────────────  ┐"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                        running query… 45%                                        │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌ Detail ──────────────────────────────────────────────────────────────────────────────────────────┐"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
